deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: hello
  template:
    # annotations:
    #   linkerd.io.inject: enabled
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: paulbouwer/hello-kubernetes:1.10
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
