deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  labels:
    name: hello
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello
            port: 
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: linkerd
            port: 
              number: 8084
